Fix #274 [Templates] Launchpad Template

--- a/templates/pom.xml
+++ b/templates/pom.xml
@@ -47,6 +47,7 @@
 		<module>template-listener</module>
 		<module>template-extension-view</module>
 		<module>template-extension-perspective</module>
+		<module>template-application-launchpad</module>
 		<module>template-application-angular</module>
 		<module>template-application-openui5</module>
 	</modules>
