--- a/resources/resources-themes/src/main/resources/resources/themes/default/ide.css
+++ b/resources/resources-themes/src/main/resources/resources/themes/default/ide.css
@@ -288,3 +288,48 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 	color: #daa50e;
 }
 
+.plane-inner {
+ 	left: 1em;
+    top: 1em;
+    width: calc(100% - 1em);
+    height: calc(100% - 1em);
+}
+
+.panel-heading {
+    background: url(../../web/resources/images/clouds.jpg) no-repeat center center;
+    opacity: 0.85;
+    filter: grayscale(100%);
+}
+.panel > header {
+	background-color:#337ab7;
+	color: #e1e6ea;
+	background: url(../../web/resources/images/clouds.jpg) no-repeat center center;
+	opacity: 0.85;
+	filter: grayscale(100%);
+	background-size: cover;
+	border-color: #ba950e;
+}
+.leading {
+	font-size: 38px;
+	line-height: 1 !important;
+	font-family: Helvetica Neue, Arial;
+}
+.panel-primary>.panel-heading {
+    color: #fff;
+    background-color: #337ab7;
+}
+.panel-footer {
+    padding: 10px 15px;
+    background-color: #444446;
+    color: #fee;
+    border-top: 1px solid #343436;
+    border-bottom-right-radius: 2px;
+    border-bottom-left-radius: 2px;
+}
+.h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+    line-height: 1;
+}
+
+.panel-primary {
+    border-color: #bbb;
+}
