--- a/ide/ui/ide-extensions/src/main/resources/ide-extensions/views/extensions/index.html
+++ b/ide/ui/ide-extensions/src/main/resources/ide-extensions/views/extensions/index.html
@@ -17,16 +17,16 @@
 
     <title>Eclipse Dirigible &trade; | View </title>
 
-    <link rel="shortcut icon" type="image/png" href="/services/v3/web/resources/images/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="../../../../../../services/v3/web/resources/images/favicon.png" />
 	
 	<!-- FontAwesome icon set -->
-    <link type="text/css" href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link type="text/css" href="../../../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 		
 	<!-- Twitter Bootstrap with Theme Support -->
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
+	<link type="text/css" rel="stylesheet" href="../../../../../../services/v3/core/theme/bootstrap.min.css">
 	
 	<!-- Custom IDE Styles -->
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
+	<link type="text/css" rel="stylesheet" href="../../../../../../services/v3/core/theme/ide.css" />
 	
 </head>
 
@@ -77,8 +77,8 @@
 			</div>
 		
 
-	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+	<script type="text/javascript" src="../../../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script type="text/javascript" src="../../../../../../services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
 	<script>
 		angular.module('extensions', []);
 		angular.module('extensions').controller('ExtensionsController', function ($scope, $http) {
