--- a/ide/ui/ide-plugins/src/main/resources/ide-plugins/views/plugins/index.html
+++ b/ide/ui/ide-plugins/src/main/resources/ide-plugins/views/plugins/index.html
@@ -17,16 +17,16 @@
 
     <title>Eclipse Dirigible &trade; | Plugins </title>
 
-    <link rel="shortcut icon" type="image/png" href="/services/v3/web/resources/images/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="../../../../../../services/v3/web/resources/images/favicon.png" />
 	
 	<!-- FontAwesome icon set -->
-    <link type="text/css" href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link type="text/css" href="../../../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
 		
 	<!-- Twitter Bootstrap with Theme Support -->
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
+	<link type="text/css" rel="stylesheet" href="../../../../../../services/v3/core/theme/bootstrap.min.css">
 	
 	<!-- Custom IDE Styles -->
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
+	<link type="text/css" rel="stylesheet" href="../../../../../../services/v3/core/theme/ide.css" />
 	
 </head>
 
@@ -55,16 +55,16 @@
 								<td>{{$index + 1}}</td>
 								<td><a href="{{plugin.site}}" title="{{plugin.description}}" target="_blank">{{plugin.name}}</a></td>
 								<td>{{plugin.version}}</td>
-								<td><a class="btn btn-primary btn-xs" href="/services/v3/web/ide-git/index.html?repository={{plugin.repository}}" title="Install {{plugin.name}}" target="_blank">install</a></td>
+								<td><a class="btn btn-primary btn-xs" href="../../../../../../services/v3/web/ide-git/index.html?repository={{plugin.repository}}" title="Install {{plugin.name}}" target="_blank">install</a></td>
 							</tr>
 						</tbody>
 					</table>
 				</td>
 			</div>
-	</div>	
+	</div>
 
-	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-	<script type="text/javascript" src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+	<script type="text/javascript" src="../../../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script type="text/javascript" src="../../../../../../services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
 	<script>
 		angular.module('plugins', []);
 		angular.module('plugins').controller('PluginsController', function ($scope, $http) {
