--- a/ide/ui/ide-security/src/main/resources/ide-security/views/access/index.html
+++ b/ide/ui/ide-security/src/main/resources/ide-security/views/access/index.html
@@ -15,24 +15,24 @@
 	
 	<title>Eclipse Dirigible - Access</title>
 
-	<link href="/services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
+	<link href="../../../../../../services/v3/web/resources/font-awesome-4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet">
 	
 	<!-- AngularJS -->
-	<script src="/services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
-	<script src="/services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
+	<script src="../../../../../../services/v3/web/resources/angular/1.4.7/angular.min.js"></script>
+	<script src="../../../../../../services/v3/web/resources/angular/1.4.7/angular-resource.min.js"></script>
 	
 	<!-- jQuery -->
-	<script src="/services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
+	<script src="../../../../../../services/v3/web/resources/jquery/2.0.3/jquery.min.js"></script>
 	
 	<!-- Twitter Bootstrap with Theme Support -->
-	<link rel="stylesheet" href="/services/v3/core/theme/bootstrap.min.css">
-	<script src="/services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="../../../../../../services/v3/core/theme/bootstrap.min.css">
+	<script src="../../../../../../services/v3/web/resources/bootstrap/3.3.7/bootstrap.min.js"></script>
 	
-	<script src="/services/v3/web/ide/ui/message-hub.js"></script>
+	<script src="../../../../../../services/v3/web/ide/ui/message-hub.js"></script>
 	<script src="controller.js"></script>
 
 	<!-- Custom IDE Styles -->
-	<link type="text/css" rel="stylesheet" href="/services/v3/core/theme/ide.css" />
+	<link type="text/css" rel="stylesheet" href="../../../../../../services/v3/core/theme/ide.css" />
 	
 </head>
 
