--- a/resources/resources-theme-florence/src/main/resources/theme-florence/ide.css
+++ b/resources/resources-theme-florence/src/main/resources/theme-florence/ide.css
@@ -94,8 +94,9 @@ body {
 	height: 2em;
 	background: transparent;
 	color: #000000;
-	position: fixed;
 	background-color: #313c46;
+	position: fixed;
+	bottom: 0;
 }
 .lm_header .lm_tab {
 	background: transparent;
