--- a/resources/resources-theme-simone/src/main/resources/theme-simone/ide.css
+++ b/resources/resources-theme-simone/src/main/resources/theme-simone/ide.css
@@ -35,7 +35,7 @@ body {
 	vertical-align: top;
 	-webkit-flex: none;
 	flex: none;
-	position: relative;
+	position: fixed;
 	top: 24px;
 }
 .plane {
@@ -52,7 +52,8 @@ body {
 	height: 2em;
 	background: #65819a;
 	color: #fec600;
-	position: relative;
+	position: fixed;
+	bottom: 0;
 }
 .lm_header .lm_tab {
 	background: #748ea4;
