--- a/resources/resources-theme-wendy/src/main/resources/theme-wendy/ide.css
+++ b/resources/resources-theme-wendy/src/main/resources/theme-wendy/ide.css
@@ -34,7 +34,7 @@ body {
 	vertical-align: top;
 	-webkit-flex: none;
 	flex: none;
-	position: relative;
+	position: fixed;
 	top: 20px;
 }
 .plane {
@@ -51,7 +51,8 @@ body {
 	height: 2em;
 	background: #337ab7;
 	color: #fec600;
-	position: relative;
+	position: fixed;
+	bottom: 0;
 }
 .lm_header .lm_tab {
 	background: #adadad;
