--- a/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
+++ b/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
@@ -166,11 +166,11 @@ nav.navbar .dropdown-menu{
     box-shadow: none;
 }
 .vakata-context li>a {
-	font-size: 14px;
+	font-size: .9em;
     line-height: 2em;
     height: 2.6rem;
     font-family: arial;
-	padding: 0 3.4rem;
+	padding: 0 3.1rem;
 }
 .vakata-context li>a>i:empty {
     width: 2rem;
@@ -436,7 +436,7 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 }
 
 .console-row-info {
-	color: red;
+	color: green;
 }
 
 .console-row-debug {
@@ -446,4 +446,3 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 .console-row-trace {
 	color: darkgray;
 }
-
