Fixed: #430 - StatusBar Integration

--- a/resources/resources-theme-baroness/src/main/resources/theme-baroness/ide.css
+++ b/resources/resources-theme-baroness/src/main/resources/theme-baroness/ide.css
@@ -53,6 +53,14 @@ body {
 	color: #fff;
 	position: fixed;
 	bottom: 0;
+	padding: 4px 56px 0px 26px;
+}
+.statusbar-message {
+	width: 30%;
+}
+.statusbar-error {
+	color: #ed7474;
+	width: 30%;
 }
 .list-group-item {
   background: none !important;
