--- a/resources/resources-theme-wendy/src/main/resources/theme-wendy/ide.css
+++ b/resources/resources-theme-wendy/src/main/resources/theme-wendy/ide.css
@@ -53,6 +53,14 @@ body {
 	color: #fec600;
 	position: fixed;
 	bottom: 0;
+	padding: 4px 56px 0px 26px;
+}
+.statusbar-message {
+	width: 30%;
+}
+.statusbar-error {
+	color: red;
+	width: 30%;
 }
 .lm_header .lm_tab {
 	background: #adadad;
