--- a/resources/resources-theme-default/src/main/resources/theme-default/ide.css
+++ b/resources/resources-theme-default/src/main/resources/theme-default/ide.css
@@ -35,7 +35,11 @@ body {
 	-webkit-flex: none;
 	flex: none;
 	position: fixed;
-	top: 20px;
+	top: 24px;
+	height: 100%;
+	border-right-color: #292929;
+	border-right-style: solid;
+	border-right-width: 2px;
 }
 .plane {
  	-webkit-flex: 1;
@@ -49,8 +53,8 @@ body {
 .statusbar {
 	width: 100%;
 	height: 2em;
-	background: #555;
-	color: #daa50d;
+	background: #13445c;
+	color: #eee;
 	position: fixed;
 	bottom: 0;
 	padding: 4px 56px 0px 26px;
@@ -100,8 +104,8 @@ nav.navbar .dropdown-menu{
 .lm_header .lm_tab.lm_active{
   box-shadow: none;
   padding-bottom: 0px;
-  border-top: #daa50e;
-  border-top-width: 2px;
+  border-top: #6bb9e1;
+  border-top-width: 1px;
   border-top-style: solid;
 }
  
@@ -184,23 +188,23 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
   flex: 1 1 auto;
   max-width: 15%;
   padding: 2px 5px;
-  background: #292929;
+  /*background: #292929;*/
 }
 .value {
   flex: 2 1 auto;
   padding: 2px 5px;
 }
 .striped-container .striped-item:nth-of-type(odd) {
-  background: #565656;
+  /*background: #565656;*/
 }
 .striped-container .striped-item:nth-of-type(odd) .key {
-  background: #222;
+  /*background: #222;*/
 }
 .striped-container .striped-item:nth-of-type(odd) .value {
-  background: #292929;
+  /*background: #292929;*/
 }
 .striped-item:hover .value {
-  background: rgba(86, 86, 86, 0.85);
+  background: rgba(41, 41, 41, 0.85);
 }
 .striped-item:nth-of-type(odd):hover .value{
   background: rgba(41, 41, 41, 0.85);
@@ -294,7 +298,7 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 }
 
 .list-group-item.active, .list-group-item.active:focus, .list-group-item.active:hover {
-	color: #daa50e;
+	color: #eee /*#6bb9e1*/;
 }
 
 .plane-inner {
