--- a/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
+++ b/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
@@ -266,7 +266,7 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 }
 
 .modal {
-	color: #cddae4;
+	color: #333;
 }
 .modal-backdrop.in{
 	opacity:.8;filter:alpha(opacity=50)
