--- a/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
+++ b/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
@@ -1,3 +1,7 @@
+/*
+ * Fiori Light Theme
+ */
+
 html, body {
     height: 100%;
     margin: 0;         /* Reset default margin on the body element */
@@ -19,6 +23,9 @@ body {
   --modeler-entity-background: #fff;
   --modeler-entity-color: #3277b3;
   --modeler-entity-connector: #609dd2;
+}
+.btn {
+	padding:2px 6px 2px 6px;font-size:15px;line-height:1.3;border-radius:2px;
 }
 .navbar {
 	margin-bottom: 0px !important;
@@ -75,8 +82,11 @@ body {
 }
 .lm_header .lm_tab {
 	background: #edeff0;
-	color: #818487;
+	color: #414447;
 	font-size: 14px;
+	font-weight: 300;
+	font-family: Helvetica Neue, Arial;
+	letter-spacing: 0.05em;
 }
 .lm_header .lm_active {
     background: #fefefe;
@@ -189,8 +199,8 @@ nav.navbar .dropdown-menu{
 	font-size: .9em;
     line-height: 2em;
     height: 2.6rem;
-    font-family: arial;
 	padding: 0 3.1rem;
+	font-weight: 300;
 }
 .vakata-context li>a>i:empty {
     width: 2rem;
@@ -215,7 +225,7 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 }
 
 .view {
-	background-color: #f5f5f5;
+	background-color: #fff;
 	color: #343436;
 }
 
@@ -266,7 +276,9 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 }
 
 .modal {
-	color: #333;
+	color: #aaa;
+	/*letter-spacing: 1px;*/
+	font-size: 1.2em;
 }
 .modal-backdrop.in{
 	opacity:.8;filter:alpha(opacity=50)
@@ -415,6 +427,7 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
     line-height: 1;
+    font-size: 1.4em;
 }
 
 .my-list-item {
@@ -448,26 +461,37 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 	font-size: 16px;
 	margin-top: 1px;
 	margin-right: 2px;
+	font-weight: 300;
 }
 
 .workspace {
 	border-top: 2px solid #edeff0;
+	font-weight: 300;
+}
+
+.search {
+	border-top: 2px solid #edeff0;
+	font-weight: 300;
 }
 
 .debugger {
 	border-top: 2px solid #edeff0;
+	font-weight: 300;
 }
 
 .database {
 	border-top: 2px solid #edeff0;
+	font-weight: 300;
 }
 
 .repository {
 	border-top: 2px solid #edeff0;
+	font-weight: 300;
 }
 
 .registry {
 	border-top: 2px solid #edeff0;
+	font-weight: 300;
 }
 
 .lm_header .lm_controls>li {
@@ -501,4 +525,14 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 
 .console-row-trace {
 	color: darkgray;
+}
+
+.search-box {
+	height: 23px !important;
+	margin-top: 1px !important;
+}
+
+.search-button {
+	height: 23px !important;
+	margin-left: 4px !important;
 }
