--- a/resources/resources-theme-fiori/src/main/resources/theme-fiori/jstree.css
+++ b/resources/resources-theme-fiori/src/main/resources/theme-fiori/jstree.css
@@ -146,7 +146,7 @@
   color: black;
   white-space: nowrap;
   line-height: 2.4em;
-  text-shadow: 1px 1px 0 white;
+  /*text-shadow: 1px 1px 0 white;*/
   border-radius: 1px;
 }
 .vakata-context li > a:hover {
