--- a/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
+++ b/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
@@ -557,3 +557,20 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 	font-size: 4;
 	padding-top: 0px;
 }
+
+.responsive-container {
+    position: relative;
+    overflow: hidden;
+    /* padding-top: 56.25%; */
+	width: 100%;
+    height: 100%;
+}
+
+.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
