--- a/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
+++ b/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
@@ -578,3 +578,11 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
     height: 100%;
     border: 0;
 }
+
+.documents-folder-button {
+	height: 20px !important;
+	font-size: 4;
+	padding-top: 0px;
+	border-radius: 0;
+	margin-top: 0px;
+}
