logs view styling

--- a/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
+++ b/resources/resources-theme-fiori/src/main/resources/theme-fiori/ide.css
@@ -586,3 +586,11 @@ ul.vakata-context.jstree-contextmenu span.vakata-contextmenu-shortcut {
 	border-radius: 0;
 	margin-top: 0px;
 }
+
+.logs-dropdown {
+	border-radius: 0 !important;
+	border: 0 !important;
+	margin: 0 !important;
+	padding: 0 !important;
+	box-shadow: none;
+}
